--- a/src/app/modules/user/pages/new-user/new-user.component.html
+++ b/src/app/modules/user/pages/new-user/new-user.component.html
@@ -1,4 +1,4 @@
-<form class="my-10 space-y-6" [formGroup]="editForm"(ngSubmit)="save()" [formGroup]="editForm">
+<form class="my-10 space-y-6" name="editForm" role="form" [formGroup]="editForm"(ngSubmit)="save()">
   <div class="text-center">
     <h2 class="mb-1 text-3xl font-semibold text-gray-700 dark:text-white">
       New User <span class="text-primary-500">!</span>
@@ -40,7 +40,7 @@
     <div class="relative">
       <input type="password" id="confirmPassword" name="confirmPassword" formControlName="confirmPassword" class="peer block" placeholder=" " />
       <label
-        for="confirm-password"
+        for="confirmPassword"
         class="absolute top-2 left-1 z-10 origin-[0] -translate-y-4 scale-95 transform bg-white px-2 text-sm text-gray-500 duration-300 peer-placeholder-shown:top-1/2 peer-placeholder-shown:-translate-y-1/2 peer-placeholder-shown:scale-100 peer-focus:top-2 peer-focus:-translate-y-4 peer-focus:scale-95 peer-focus:px-2 peer-focus:text-primary-600 dark:bg-night-700 dark:text-night-200">
         Confirm Password
       </label>
@@ -54,9 +54,8 @@
   </div>
 
   <!-- Submit Button -->
-  <button
-    type="button"
-    routerLink="/dashboard"
+  <button type="submit"
+    
     class="group relative mb-10 flex w-full justify-center rounded-md border border-transparent bg-primary-500 py-2 px-4 text-sm font-medium text-white focus:outline-none focus:ring-2 focus:ring-primary-500 focus:ring-offset-2 hover:bg-primary-400">
     Save
   </button>
